--- a/backend/wumpus/templates/wumpus/board.html
+++ b/backend/wumpus/templates/wumpus/board.html
@@ -101,13 +101,13 @@
                             <span class="info-label">Last Move:</span>
                             <span class="info-value" id="last-move">-</span>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item move-result-item">
                             <span class="info-label">Move Result:</span>
-                            <span class="info-value" id="move-result">-</span>
+                            <span class="info-value move-result" id="move-result">-</span>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item percepts-item">
                             <span class="info-label">Percepts:</span>
-                            <span class="info-value" id="current-percepts">None</span>
+                            <span class="info-value percepts" id="current-percepts">None</span>
                         </div>
                     </div>
                 </div>
